--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -17,6 +17,11 @@ jobs:
       options: --privileged
 
     steps:
+      - name: Initialize GPG keys
+        run: |
+          pacman-key --init
+          pacman-key --populate archlinux
+
       - name: Install tools
         run: |
           pacman -Sy --noconfirm archlinux-keyring
@@ -24,6 +29,8 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: false
 
       - name: Build C installer (optional)
         run: |
@@ -41,6 +48,28 @@ jobs:
           PROFILE_DIR="$(pwd)"
           WORK_DIR="$PROFILE_DIR/work"
           OUT_DIR="$PROFILE_DIR/out"
+          
+          echo "Profile directory: $PROFILE_DIR"
+          echo "Work directory: $WORK_DIR"
+          echo "Output directory: $OUT_DIR"
+          
+          # Verify profiledef.sh exists
+          if [ ! -f "$PROFILE_DIR/profiledef.sh" ]; then
+            echo "ERROR: profiledef.sh not found in $PROFILE_DIR"
+            ls -la "$PROFILE_DIR"
+            exit 1
+          fi
+          
+          # Create directories if they don't exist
+          mkdir -p "$WORK_DIR" "$OUT_DIR"
+          
+          # Verify directories were created
+          if [ ! -d "$WORK_DIR" ] || [ ! -d "$OUT_DIR" ]; then
+            echo "ERROR: Failed to create work or output directories"
+            exit 1
+          fi
+          
+          # Run mkarchiso with explicit paths
           mkarchiso -v -w "$WORK_DIR" -o "$OUT_DIR" "$PROFILE_DIR"
 
       - name: Upload ISO artifact
